tests/algorithms/x/C/web_programming/fetch_anime_and_play.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:44 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <ctype.h>

size_t search_scraper_len;
size_t search_anime_episode_list_len;
size_t get_anime_episode_len;

size_t append_len;
static int contains_str(const char *arr[], size_t len, const char *val) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(arr[i], val) == 0) return 1;
    }
    return 0;
}

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_list_str(const char **arr, size_t len) {
    size_t cap = 2;
    for (size_t i = 0; i < len; i++) cap += strlen(arr[i]) + 1;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        size_t n = strlen(arr[i]);
        memcpy(buf + pos, arr[i], n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static char* str_lower(const char *s) {
    size_t n = strlen(s);
    char *out = strdup(s);
    for(size_t i=0;i<n;i++) out[i] = tolower((unsigned char)out[i]);
    return out;
}

typedef struct { const char **keys; void **vals; size_t *lens; size_t len; size_t cap; } MapSL;

typedef struct { const char **keys; const char **vals; size_t len; size_t cap; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static void* map_get_sl(const char *keys[], void *vals[], const size_t lens[], size_t len, const char *key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

typedef struct ANIME_DB ANIME_DB;
typedef struct Data2 Data2;
typedef struct Data5 Data5;
typedef struct Data6 Data6;
typedef struct Data7 Data7;
typedef struct Data8 Data8;
typedef struct EPISODE_DB EPISODE_DB;
typedef struct EPISODE_DB1 EPISODE_DB1;

struct ANIME_DB {
    const char* title;
    const char* url;
};

struct Data2 {
    const char* title;
    const char* url;
};

struct Data5 {
    const char* title;
    const char* url;
};

struct Data6 {
    const char* title;
    const char* url;
};

struct Data7 {
    const char* title;
    const char* url;
};

struct Data8 {
    const char* title;
    const char* url;
};

struct EPISODE_DB {
    const char* title;
    const char* url;
};

struct EPISODE_DB1 {
    const char* title;
    const char* url;
};

static MapSS* list_append_MapSS(MapSS *arr, size_t *len, MapSS val) {
    arr = realloc(arr, (*len + 1) * sizeof(MapSS));
    arr[*len] = val;
    (*len)++;
    return arr;
}

const char* BASE_URL = "https://ww7.gogoanime2.org";
MapSS ANIME_DB_init[2] = {(ANIME_DB){.title = "Demon Slayer", .url = "/anime/kimetsu-no-yaiba"}, (ANIME_DB){.title = "Naruto", .url = "/anime/naruto"}};
MapSS *ANIME_DB = ANIME_DB_init;
size_t ANIME_DB_len = 2;
static const char* EPISODE_DB_keys[18] = {"/anime/kimetsu-no-yaiba", "/anime/naruto"};
static MapSS EPISODE_DB_vals_0[2] = {(EPISODE_DB){.title = "Episode 1", .url = "/watch/kimetsu-no-yaiba/1"}, (EPISODE_DB){.title = "Episode 2", .url = "/watch/kimetsu-no-yaiba/2"}};
static MapSS EPISODE_DB_vals_1[1] = {(EPISODE_DB1){.title = "Episode 1", .url = "/watch/naruto/1"}};
static void* EPISODE_DB_vals[18] = {EPISODE_DB_vals_0, EPISODE_DB_vals_1};
static size_t EPISODE_DB_lens[18] = {2, 1};
size_t EPISODE_DB_len = 2;
MapSL EPISODE_DB = { EPISODE_DB_keys, EPISODE_DB_vals, EPISODE_DB_lens, 2, 18 };
static const char* EPISODE_EMBED_keys[19] = {"/watch/kimetsu-no-yaiba/1", "/watch/kimetsu-no-yaiba/2", "/watch/naruto/1"};
static const char* EPISODE_EMBED_vals[19] = {"/embed/kimetsu-no-yaiba/1", "/embed/kimetsu-no-yaiba/2", "/embed/naruto/1"};
size_t EPISODE_EMBED_len = 3;
MapSS EPISODE_EMBED = { EPISODE_EMBED_keys, EPISODE_EMBED_vals, 3, 19 };

long long contains_str(const char* s, const char* sub);
MapSS * search_scraper(const char* anime_name);
MapSS * search_anime_episode_list(const char* endpoint);
const char* to_playlist(const char* embed);
const char* * get_anime_episode(const char* endpoint);
void user_main();
int main(void);

long long contains_str(const char* s, const char* sub) {
    if (strlen(sub) == 0LL) {
        return 1LL;
    }
    long long i = 0LL;
    while ((i + strlen(sub)) <= strlen(s)) {
        if (strcmp(_substring(s, i, i + strlen(sub)), sub) == 0) {
            return 1LL;
        }
        i = i + 1LL;
    }
    return 0LL;
}

MapSS * search_scraper(const char* anime_name) {
    const char* term = str_lower(anime_name);
    MapSS *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < 2LL) {
        MapSS item = ANIME_DB[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? ANIME_DB_len + _mochi_idx : _mochi_idx;})];
        if (contains_str(str_lower(map_get_ss(item.keys, item.vals, item.len, "title")), term)) {
            res = list_append_MapSS(res, &res_len, item);
        }
        i = i + 1LL;
    }
    return search_scraper_len = res_len, res;
}

MapSS * search_anime_episode_list(const char* endpoint) {
    if (contains_str(EPISODE_DB.keys, EPISODE_DB.len, endpoint)) {
        return map_get_sl(EPISODE_DB.keys, EPISODE_DB.vals, EPISODE_DB.lens, EPISODE_DB.len, endpoint, NULL);
    }
    MapSS *empty = NULL;
    size_t empty_len = 0;
    return search_anime_episode_list_len = empty_len, empty;
}

const char* to_playlist(const char* embed) {
    return str_concat(str_concat("/playlist/", _substring(embed, 7LL, strlen(embed))), ".m3u8");
}

const char* * get_anime_episode(const char* endpoint) {
    if (contains_str(EPISODE_EMBED.keys, EPISODE_EMBED.len, endpoint)) {
        const char* embed = map_get_ss(EPISODE_EMBED.keys, EPISODE_EMBED.vals, EPISODE_EMBED.len, endpoint);
        const char* play = str_concat(BASE_URL, embed);
        const char* download = str_concat(BASE_URL, to_playlist(embed));
        {
            const char** __tmp0_data = malloc(2 * sizeof(const char*));
            __tmp0_data[0] = play;
            __tmp0_data[1] = download;
            get_anime_episode_len = 2;
            return __tmp0_data;
        }
    }
    const char* *empty = NULL;
    size_t empty_len = 0;
    return get_anime_episode_len = empty_len, empty;
}

void user_main() {
    MapSS *animes = search_scraper("demon");
    size_t animes_len = search_scraper_len;
    printf("%d\n", animes);
    MapSS *episodes = search_anime_episode_list("/anime/kimetsu-no-yaiba");
    size_t episodes_len = search_anime_episode_list_len;
    printf("%d\n", episodes);
    const char* *links = get_anime_episode("/watch/kimetsu-no-yaiba/1");
    size_t links_len = get_anime_episode_len;
    puts(str_list_str(links, links_len));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
